--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,110 @@
+@import url("https://fonts.googleapis.com/css2?family=Signika:wght@400;600&display=swap");
 .App {
+  background-image: url("https://media.giphy.com/media/iicDrNGWxHmDrIni6j/giphy.gif");
+  background-position: center;
+  background-size: 100% 100%, cover;
+  background-repeat: no-repeat;
+  color: #fff;
+  font-family: "Signika", sans-serif;
+}
+
+.tsparticles-canvas-el {
+  position: fixed;
+}
+
+/************ADMIN**********/
+.admin {
+  text-align: center;
+  padding: 1rem;
+}
+
+.admin h1 {
+  margin: 4rem 1rem 1rem 1rem;
+  font-size: 3.2rem;
+}
+
+.row {
+  background: rgba(0, 0, 0, 0.6);
+  padding: 0.5rem;
+  margin: 3rem 1rem;
+  border-radius: 0.75rem;
+}
+/* .left {
+  border-right: 0.6px solid #fff;
+} */
+
+.left,
+.right {
+  padding: 1rem;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.left {
+  background: inherit;
+  border-top-left-radius: 0.75rem;
+  border-bottom-left-radius: 0.75rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.right {
+  background: lightblue;
+  border-top-right-radius: 0.75rem;
+  border-bottom-right-radius: 0.75rem;
+}
+h2 {
+  font-size: 1.4rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.withdraw-amnt {
+  display: inline-block;
+  padding: 0.4rem 5rem;
+  background-color: black;
+  border-radius: 0.75rem;
+  margin: 0.5rem;
+}
+
+.btn-grad {
+  background-image: linear-gradient(
+    to right,
+    #3494e6 0%,
+    #ec6ead 51%,
+    #3494e6 100%
+  );
+  margin: 10px auto;
+}
+.btn-grad {
+  padding: 8px 45px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
   color: white;
+  border-radius: 38px;
+  display: block;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-grad:hover {
+  background-position: right center; /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.input-group {
+  width: 60%;
+  margin: 20px auto;
+}
+
+.input-group-text {
+  color: #ffffff;
+  background-color: #007bff;
+}
+
+@media (max-width: 972px) {
+  .left {
+    border-bottom-left-radius: 0rem;
+    border-top-right-radius: 0.75rem;
   }
-  to {
-    transform: rotate(360deg);
+  .right {
+    border-top-right-radius: 0rem;
+    border-bottom-left-radius: 0.75rem;
   }
 }
