--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,11 @@
   font-family: "Signika", sans-serif;
 }
 
+.modal-body,
+.modal-title,
+tr {
+  color: #000 !important;
+}
 .tsparticles-canvas-el {
   position: fixed;
 }
